// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders default 1`] = `
.c0 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: env(safe-area-inset-top) env(safe-area-inset-right) 0 env(safe-area-inset-left);
  position: sticky;
  top: 0;
  z-index: 200;
  background: #fff;
  box-shadow: 0 1px 2px 0 rgba(60,64,67,0.3),0 2px 6px 2px rgba(60,64,67,0.15);
  text-transform: uppercase;
}

@media screen and (min-width:40rem) {
  .c0 {
    justify-content: flex-start;
  }
}

<header
  className="c0"
/>
`;

exports[`<Header /> renders default 2`] = `
.c0 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: env(safe-area-inset-top) env(safe-area-inset-right) 0 env(safe-area-inset-left);
  position: sticky;
  top: 0;
  z-index: 200;
  background: #202124;
  box-shadow: 0 1px 2px 0 rgba(60,64,67,0.3),0 2px 6px 2px rgba(60,64,67,0.15);
  text-transform: uppercase;
}

@media screen and (min-width:40rem) {
  .c0 {
    justify-content: flex-start;
  }
}

<header
  className="c0"
/>
`;

exports[`renders default <H1 /> 1`] = `
.c0 {
  margin: 3rem auto 1rem auto;
  font-size: 2rem;
  text-transform: uppercase;
}

<h1
  className="c0"
/>
`;

exports[`renders default <H2 /> 1`] = `
.c0 {
  margin: 0.2rem 0;
  font-size: 1.7rem;
}

<h2
  className="c0"
/>
`;
